(WIP) Initial Updates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ h6 {
 }
 
 /*large-btn*/
-.btn-lg, 
+.btn-lg,
 .btn-group-lg>.btn {
     padding: 14px 20px;
     font-size: 14px;
@@ -176,11 +176,11 @@ h6 {
     border-color: rgba(51, 51, 51, 0.15);
 }
 
-.btn-primary:hover, 
-.btn-primary:focus, 
-.btn-primary.focus, 
-.btn-primary:active, 
-.btn-primary.active, 
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary.focus,
+.btn-primary:active,
+.btn-primary.active,
 .open>.dropdown-toggle.btn-primary {
     color: #fff;
     background-color: #4eb28f;
@@ -193,11 +193,11 @@ h6 {
     border-color: rgba(51, 51, 51, 0.15);
 }
 
-.btn-info:hover, 
-.btn-info:focus, 
-.btn-info.focus, 
-.btn-info:active, 
-.btn-info.active, 
+.btn-info:hover,
+.btn-info:focus,
+.btn-info.focus,
+.btn-info:active,
+.btn-info.active,
 .open>.dropdown-toggle.btn-info {
     color: #fff;
     background-color: #4aa0c2;
@@ -210,10 +210,10 @@ h6 {
     border: 1px solid #fff;
     color: #fff;
 }
-.btn-default:hover, 
-.btn-default:focus, 
-.btn-default.focus, 
-.btn-default:active, 
+.btn-default:hover,
+.btn-default:focus,
+.btn-default.focus,
+.btn-default:active,
 .btn-default.active{
     color: #68c3a3;
     background-color: #fff;
@@ -250,7 +250,7 @@ ul, ol {
 
 
 ul.list-check {
-    
+
 }
 
 ul.list-check li{
@@ -362,8 +362,8 @@ ul.list-check li::before {
 	margin-bottom: 20px;
 }
 
-/* 
-SOCIAL ICON 
+/*
+SOCIAL ICON
 -------------------------------------------*/
 .social-icons {
     margin-top: 20px;
@@ -401,7 +401,7 @@ SOCIAL ICON
     -webkit-transition: all 300ms;
        -moz-transition: all 300ms;
          -o-transition: all 300ms;
-            transition: all 300ms;            
+            transition: all 300ms;
 }
 
 .social-icons a i:hover::after{
@@ -564,10 +564,10 @@ SOCIAL ICON
 
 
 .biography{
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 10px;
     border:1px solid #EEEEEE;
     position: relative;
+    overflow: hidden;
 }
 
 .biography::after{
@@ -582,7 +582,6 @@ SOCIAL ICON
 
 .myphoto{
     position: relative;
-    background: url(../../assets/images/photo-frame.png) bottom center no-repeat;
     background-size: contain;
 }
 
@@ -765,7 +764,7 @@ Resume Timeline
 
 
 .timeline>li .posted-date .month {
-    font-size: 18px;
+    font-size: 14px;
     line-height: 20px;
     font-weight: 700;
     display: block;
@@ -947,11 +946,11 @@ Resume Timeline
 /* === Skill Section === */
 .skills-section {
     background-color: #1a1e23;
-    color: #fff;   
+    color: #fff;
 }
 .skills-section .section-title{
     color: #fff;
-    margin-bottom: 110px;  
+    margin-bottom: 110px;
 }
 .skills-section .section-title h2{
     color: #fff;
@@ -1030,8 +1029,8 @@ Resume Timeline
     text-align: center;
 }
 .chart canvas {
-    position:absolute; 
-    top:0; 
+    position:absolute;
+    top:0;
     left:0;
 }
 .percent {
@@ -1201,7 +1200,7 @@ Resume Timeline
     text-align: center;
 }
 
-.portfolio:hover .tt-overlay, 
+.portfolio:hover .tt-overlay,
 .portfolio:hover .links {
     opacity: 1;
     -webkit-transform: translate(0,0);
@@ -1227,9 +1226,9 @@ Resume Timeline
   opacity: 0;
   -webkit-backface-visibility: hidden;
   /* ideally, transition speed should match zoom duration */
-  -webkit-transition: all 0.3s ease-out; 
-  -moz-transition: all 0.3s ease-out; 
-  -o-transition: all 0.3s ease-out; 
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
 
@@ -1240,7 +1239,7 @@ Resume Timeline
     opacity: 0.8;
 }
 
-.mfp-with-zoom.mfp-removing .mfp-container, 
+.mfp-with-zoom.mfp-removing .mfp-container,
 .mfp-with-zoom.mfp-removing.mfp-bg {
   opacity: 0;
 }
@@ -1253,7 +1252,7 @@ Resume Timeline
     background: url(../../assets/images/counter-bg.jpg) no-repeat center center;
     background-attachment: fixed;
     background-size: cover;
-    color: #fff;  
+    color: #fff;
 }
 
 .tt-overlay-bg {
@@ -1278,7 +1277,7 @@ Resume Timeline
 
 /* === Blog Section === */
 .latest-blog-section {
-  
+
 }
 .blog-post-wrapper {
     padding: 4px;
@@ -1398,7 +1397,7 @@ Icon for all respective meta
 
 .the-author,
 .the-time,
-.the-share, 
+.the-share,
 .the-comments {
     position: relative;
     padding-left: 20px;
@@ -1418,7 +1417,7 @@ Icon for all respective meta
     background: url(../../assets/images/hire-bg.jpg) no-repeat top center #68C3A3;
     background-attachment: fixed;
     background-size: cover;
-    color: #fff;  
+    color: #fff;
 }
 .hire-section-bg {
     padding: 110px 0;
@@ -1440,7 +1439,7 @@ Icon for all respective meta
 
 /* === Contact Section === */
 .contact-section  {
-  
+
 }
 
 .contact-section strong {
@@ -1491,7 +1490,7 @@ Icon for all respective meta
     background: #1a1e23;
     padding: 36px 0;
     color: #fff;
-  
+
 }
 .copyright p {
     margin: 0;
