--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,12 @@
 =====================================
 */
 
+/* CSS Reset */
+*{
+	margin: 0px;
+	padding: 0px;
+}
+
 
 body{
     font-family: 'Roboto', sans-serif;
